<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuConfig"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:background="#66000000"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:text="@string/popup_button_back" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:background="#66000000"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonWidescreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:text="@string/popup_button_widescreen" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:background="#66000000"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonFramesDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:text="@string/popup_button_frames_down" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:background="#66000000"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonFramesUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:text="@string/popup_button_frames_up" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:background="#66000000"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonFrameLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:text="@string/popup_button_frame_limit" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:background="#66000000"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:text="@string/popup_button_audio" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:background="#66000000"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonTurbo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:text="@string/popup_button_turbo" />
        </TableRow>
    </TableLayout>

</LinearLayout>