<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="@string/system_path" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/main_path"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" >
                </EditText>

                <Button
                    android:id="@+id/browse_main_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Browse" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="@string/games_path" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/game_path"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" >
                </EditText>

                <Button
                    android:id="@+id/browse_game_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Browse" />
            </LinearLayout>
        </LinearLayout>
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:stretchColumns="*" >

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/details_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:gravity="center_vertical|left"
                    android:text="@string/select_details" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <de.ankri.views.Switch
                        android:id="@+id/details_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>